--- a/.github/workflows/dev.js.yml
+++ b/.github/workflows/dev.js.yml
@@ -25,9 +25,16 @@ jobs:
       
       - name: Client
         run: |
+          cp /home/ubuntu/env/devser/client/.env /home/ubuntu/devrun/dev/BIPL_WEBSITE/BIPL_WEBSITE/client
           cd client
           npm ci
           npm run build
+
+      - name: Server
+        run: |
+          cp /home/ubuntu/env/devser/server/.env /home/ubuntu/devrun/dev/BIPL_WEBSITE/BIPL_WEBSITE/server
+          cd server
+          npm ci
     
   
   
